<?xml version="1.0"?>
<package format="3">
  <name>canopen_motor_node</name>
  <version>0.8.0</version>
  <description>canopen_chain_node specialization for handling of canopen_402 motor devices. It facilitates interface abstraction with ros_control.</description>

  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
  <author email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</author>

  <license>LGPLv3</license>

  <url type="website">http://wiki.ros.org/canopen_motor_node</url>
  <url type="repository">https://github.com/ros-industrial/ros_canopen</url>
  <url type="bugtracker">https://github.com/ros-industrial/ros_canopen/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <depend>class_loader</depend> -->
  <depend>ament_index_cpp</depend>

  <depend>rclcpp</depend>

  <depend>std_msgs</depend>
  <depend>canopen_msgs</depend>

  <depend>canopen_402</depend>
  <depend>canopen_chain_node</depend>
  <depend>canopen_master</depend>
  <depend>muparser</depend>

  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>controller_interface</depend>

  <depend>filters</depend>

  <!-- <depend>controller_manager</depend> -->
  <!-- <depend>hardware_interface</depend> -->
  <!-- <depend>joint_limits_interface</depend> -->
  <!-- <depend>roscpp</depend> -->
  <!-- <depend>urdf</depend> -->

  <!-- <build_depend>controller_manager_msgs</build_depend> -->
  <!-- <exec_depend>controller_manager_msgs</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
